# game-knights

./: .hgignore  CMakeLists.txt  Game.cpp  Game.h  Makefile  game-knights  main.cpp  matrix.in  matrix.out  matrix.txt  play.sh  report1.odt  report2.odt
support/: Coord.h  Mark.h  Matrix.h  Token.cpp  Token.h
